# django-crud

./: .gitignore  README.md  pyproject.toml
snacks/: models.py  tests.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py
templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
